# Sire

./: .gitignore  .travis.yml  BUILD_INSTRUCTIONS.rst  CHANGELOG  CODE_OF_CONDUCT.md  CODING_STYLE.md  CODING_STYLE.rst  INSTALL  INSTALL.rst  INSTALL_INTO_ANACONDA_README  LICENSE  MERGE_LOG  README.md  README.rst  RELEASE_INSTRUCTIONS.rst  WINDOWS_INSTALL.rst  azure-pipelines-linux.yml  azure-pipelines-osx.yml  azure-pipelines.yml  compile_sire.bat  compile_sire.sh  requirements-conda.txt  requirements.txt  requirements_bss.txt  requirements_build.txt  requirements_linux.txt  requirements_macos.txt  requirements_macos_arm64.txt  selector_idea  setup-travis.sh  setup.py  version.txt
corelib/: CMakeLists.txt
corelib/docs/: CODING_STYLE  Doxyfile  HOWTO_APIDOCS
corelib/docs/tutorial/: water_dimer.py  water_energy.py  water_moves.py  water_parameters.py
corelib/examples/waterbox/: montecarlo.py  water.xsc
corelib/examples/wsrc/: README  calcpmf.py  config  proteinbox.crd  runconfig.py  runwsrc.py
corelib/parameters/: amber.zmatrices
corelib/src/apps/: CMakeLists.txt
corelib/src/bundled/: install_boost.cmake  install_cpuid.cmake  install_gsl.cmake  install_qt5.cmake  install_tbb.cmake  readme_boost  readme_qt5
corelib/src/libs/: CMakeLists.txt  sireglobal.h  tostring.h
corelib/templates/water/: spc.gro87  spc.grotop  spce.gro87  spce.grotop  spce.prm7  spce.rst7  tip3p.gro87  tip3p.grotop  tip3p.prm7  tip3p.rst7  tip4p.gro87  tip4p.grotop  tip4pew.prm7  tip4pew.rst7  tip5p.gro87  tip5p.grotop  tip5p.prm7  tip5p.rst7
corelib/test/: sire_compile_test.py
corelib/test/SireBase/: testinstalldir.py  testpackedarray.py  testrefcount.py  testwrap.py
corelib/test/SireCAS/: simplify.py
corelib/test/SireCluster/: testcluster.py
corelib/test/SireFF/: testpotential.py
corelib/test/SireIO/: amber.py  trajectory.py
corelib/test/SireMM/: harmonic_restraint.py  internalff.py  softcljff.py  testcutoff.py  testgridff.py  testgridff2.py  testintersoftcljff.py  testintracutoff.py  testintrasoftcljff.py  testnewgridff.py  testsoftcljff.py
corelib/test/SireMaths/: linearap.py  testfixed.py  testhistogram.py  testhistogram2.py
corelib/test/SireMol/: getcom.py  linearmols.py  ringmoves.py  testbeads.py
corelib/test/SireMove/: anchors.py  dynamics.py  hybridmc.py  intra_dynamics.py  intra_rbdynamics.py  movermove-abcd.py  movermove-dimedone.py  movermove-triatomic.py  mtsmc.py  mtsmc_harmonic.py  prefsampling.py  rbdynamics.py  rdf.py  reti_oscillator.py  reti_oscillator.s3  retimoves.py  rigidbodymc.py  rigidbodymd.py  simulation.py  syncmove.py  test_for_leaks.py  testfixedcenter.py  titrationmove.py  volumemove.py  zmatmove-triatomic.py
corelib/test/SireStream/: testload.py  testsharedstream.py  teststreaming.py  tmp_testdata.sire
corelib/test/SireSystem/: closemols.py  energymonitor.py  getrdf.py  idassigner.py  identityconstraint.py  perturbationconstraint.py  rdf.py  testdelta.py  testenergymonitor.py  testmonitors.py  testpolarisecharges.py  testpolarisehcl.py  testsysproperties.py  testsystem.py  wateridentity.py
corelib/test/SireUnits/: testunits.py
corelib/test/SireVol/: boxpatching.py  cgarraytest.py  changespace.py  speedtest.cpp  test_run_gcc4.0  test_run_gcc4.2  testgrid.py
corelib/test/Soiree/: testwham.py
corelib/test/Squire/: am1bcc.py  chargeconstraint.py  convert_molpro_to_pdb.py  gtos.py  hf.py  molproff.py  mopac.py  mopacsim.py  mopacsim.s3  szabo_ost.py  testqmpolarise.py  threadmolpro.py  water.cmd
corelib/test/Tools/: testmaketip4p.py
corelib/test/db/: protomsdb_speedtest.py  test_tuples.py
corelib/test/ff/: methanol.par  opls96-residues.ff  opls96.ff  p38params.py  sb2.ff  solvents.ff
corelib/test/geometry/: addhydros.py  box2box.py  make-tip4p.py  make_tip4p_from_tip3p.py  tip3p-to-tip4p.py  tip4p-spc.py
corelib/test/io/: ABCDmover.ff  DIMfree.par  SYSTEM.crd  SYSTEM.top  amber.zmatrices  charmm27.prm  cutgroups.py  dioxin.mct  ethane.ff  geom500.xyz  ligand.flex  ligand1.template  methane-in-box.mol2  ntrc.mct  oscillators.ff  osel.s3  pdb2mct.py  testsigs.py  triatomic.ff  water.ff  waterbox.crd  waterbox.top
corelib/test/maths/: functions.py
corelib/test/memory_leak/: testcoordgroup.py
corelib/test/python/: test_python_cast.py
corelib/test/speed/: solvents.ff  water_energy_speed.py  water_energy_speed2.py  water_mc_speed.py  water_speed.cmd
src/sire/: CMakeLists.txt  __init__.py  _colname.py  _load.py  _measure.py  _pythonize.py  _thumbsup.py
src/sire/analysis/: CMakeLists.txt  __init__.py
src/sire/base/: CMakeLists.txt  __init__.py
src/sire/cas/: CMakeLists.txt  __init__.py
src/sire/cluster/: CMakeLists.txt  __init__.py
src/sire/config/: CMakeLists.txt  __init__.py
src/sire/error/: CMakeLists.txt  __init__.py
src/sire/ff/: CMakeLists.txt  __init__.py
src/sire/id/: CMakeLists.txt  __init__.py
src/sire/io/: CMakeLists.txt  __init__.py
src/sire/maths/: CMakeLists.txt  __init__.py  _sphere.py  (+1 more)
wrapper/Error/: CMakeLists.txt  __init__.py  wrap_SireError.cpp  wrap_SireError.h  wrap_exceptions.cpp
wrapper/Helpers/: CMakeLists.txt  clone_const_reference.hpp  convertdict.hpp  convertlist.hpp  convertset.hpp  convertsharedpointer.hpp  len.hpp  objectregistry.cpp  objectregistry.hpp  pair.hpp  pycontainer.hpp  release_gil_policy.cpp  release_gil_policy.hpp  str.hpp  tuples.hpp
wrapper/Search/: CMakeAutogenFile.txt  CMakeLists.txt  _Search.main.cpp  _Search_free_functions.pypp.cpp  _Search_free_functions.pypp.hpp  __init__.py  active_headers.h
wrapper/Tools/: AmberLoader.py  BoreschAnalyticalCorrection.py  BoreschNumericalCorrection.py  BoreschSemiAnaCorrection.py  CMakeLists.txt  Coulcutoff.py  DCDFile.py  FDTISingleBound.py  FDTISingleFree.py  FreeEnergyAnalysis.py  LJcutoff.py  LSRC.py  Nautilus.py  OpenMMMD.py  PSRC.py  Plot.py  QuantumToMM.py  Qube.py  RFcutoff.py  StandardState.py  WSRC.py  WaterChanger.py  WaterView.py  __init__.py  ap.py  free_energy_analysis.py
wrapper/ng/: CMakeLists.txt  __init__.py  _system.py
wrapper/python/: CMakeLists.txt  main.cpp
wrapper/tests/: CMakeLists.txt
(+3717 files in other folders)
